# proposal_grader

./: .gitignore  README.md  Task_Estimation.xlsx  USER_GUIDE.md  compliance.py  create_dummy_files.py  csv_rubric_parser.py  extract_rubric.py  extract_rubric_md.py  list-agents.py  main.py  md_to_json.py  md_to_rubric_json.py  parser.py  proposal_grader.py  pyproject.toml  requirements.txt  review.py  run_grading_pipeline.py  show-config.py  solicitation_parser.py  ~$Task_Estimation.xlsx
config/: 2025.yaml  proposal_files.json  system_config.json
documents/proposal/: budget.xlsx
documents/solicitations/: eval_criteria_description.csv  eval_rubric.csv  faq.md  technical_description.md
output/: complete_rubric.json  evaluation_rubric.md  evaluation_summary copy.csv  evaluation_summary.csv
prompts/: even_at.md  market_knowledge.md  tech_risk.md  typical_nasa_sbir_proposal_at.md
rubrics/: phase1_commercial.json  phase1_technical.json
src/: __init__.py  cli.py
src/agents/: __init__.py  agent_factory.py  base_agent.py
src/agents/templates/: business_strategist.md  detail_checker.md  panel_scorer.md  storyteller.md  tech_lead.md
src/core/: __init__.py  document_processor.py  file_discovery.py  solicitation_ingester.py
src/utils/: __init__.py  config_loader.py  output_formatters.py  workflow_visualizer.py
src/workflow/: __init__.py  review_graph.py  state_models.py
