[tool.poetry]
name = "proposal-grader"
version = "0.1.0"
description = "AI-powered system for automated evaluation of SBIR/STTR proposals"
authors = ["Dan Mueller <dsm@danmueller.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.12"
openai = "*"
python-dotenv = "*"
pypdf2 = "^3.0.1"
langsmith = "^0.4.5"
langchain = "^0.3.26"
langchain-openai = "^0.3.27"
pydantic = "^2.11.7"
marker-pdf = "^1.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
