[tool.poetry]
name = "proposal-grader"
version = "0.1.0"
description = "AI-powered system for automated evaluation of SBIR/STTR proposals"
authors = ["Dan Mueller <dsm@danmueller.pro>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.12"
openai = "*"
python-dotenv = "*"
langgraph = "*"
langchain = "*"
langchain-openai = "*"
langsmith = "*"
marker-pdf = "^1.8.2"
pydantic = "^2.11.7"
graphviz = "*"
pydot = "*"
ocrmypdf = "^16.10.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
review = "src.cli:run_review"
list-agents = "src.cli:run_list_agents"
show-config = "src.cli:run_show_config"
visualize-workflow = "src.cli:run_visualize_workflow"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
